Implemented new features to Reflection and ArrayHelper.